# osal

./: FREERTOS.md
src/bsp/esp-idf-freertos/: CMakeLists.txt
src/bsp/esp-idf-freertos/inc/: esp_idf_bsp_start.h
src/bsp/esp-idf-freertos/src/: bsp_console.c  bsp_start.c  esp_idf_freertos_bsp_internal.h
src/bsp/shared/src/: bsp_default_symtab.c
src/os/freertos/: CMakeLists.txt
src/os/freertos/src/: os-impl-binsem.c  os-impl-common.c  os-impl-console.c  os-impl-countsem.c  os-impl-heap.c  os-impl-idmap.c  os-impl-mutex.c  os-impl-queue.c  os-impl-task.c  os-impl-timebase.c
src/os/freertos/todo/: os-impl-file.c  os-impl-filesys.c  os-impl-heap.c  os-impl-module.c  os-impl-sockets.c
src/os/shared/src/: osapi-common.c
